# bencode-rust

./: .readthedocs.yml  Cargo.toml  README.md
.github/: dependabot.yml
crates/bencode/src/: lib.rs
crates/bencode/src/dispatcher/: bdecode.rs
crates/bencode/src/encoders/: integer.rs
crates/bencode/src/enums/: bencode.rs
crates/bencode/src/parser/: cursor.rs  mod.rs  stack.rs  tests.rs
crates/python_bindings/: Cargo.toml
crates/python_bindings/src/: lib.rs
crates/wasm_bindings/: Cargo.toml  vitest.config.js
crates/wasm_bindings/src/: lib.rs
crates/wasm_bindings/tests/: parity.test.ts
docs/: pyproject.toml  zensical.toml
docs/src/: architecture.md  index.md  license.md
docs/src/bindings/: python.md  webassembly.md
