[package]
name = "bencode_wasm"
version = "0.1.0"
edition.workspace = true

[lib]
name = "bencode_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
bencode = { path = "../bencode" }
js-sys = "0.3.83"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt: bulk memory validation fails with current binaryen version
wasm-opt = false
